Bug 415651 - Multi-brush tool: Copy Translate "Add" button should disable when I choose other type
Summary: Multi-brush tool: Copy Translate "Add" button should disable when I choose ot...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 4.2.8
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-28 17:17 UTC by Rebecca Breu
Modified: 2020-01-08 13:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rebecca Breu 2019-12-28 17:17:52 UTC
SUMMARY

In the multi brush tool for the type "Copy Translate", the "Add" button should disable when I switch to other types.

STEPS TO REPRODUCE
1. Enable the multi brush tool
2. Select the type "Copy Translate" in the tool options
3. Press the "Add" button in the tool options for adding brushes
4. Select a different type than "Copy Translate"
5. Try to draw

OBSERVED RESULT

Won't draw. That's because it's still in the "Add brush" mode that only the Copy Translate type has. You have to go back to "Copy Translate" and push the "Add" button again to be able to draw again in any other type.


EXPECTED RESULT

It's probably best if the "Add brush" mode gets disabled as soon as I choose another type.


I'm on the 4.2.8 appimage.
Comment 1 Ahab Greybeard 2019-12-30 14:47:13 UTC
I can confirm this for the 4.2.8 appimage and the Dec 28 4.3.0 prealpha (git 3f0ff1a) appimage.

When switching to a different type of multibrush, the Tool Options docker allows all type parameter adjustments and settings to be displayed and modified with appropriate guide/display changes on the canvas. After that, painting does not happen, which is confusing.
Comment 2 confifu 2020-01-03 10:13:16 UTC
Git commit df825790541e5226e26a2e8e221ae28169dce2c4 by Saurabh Kumar.
Committed on 01/01/2020 at 20:38.
Pushed by rempt into branch 'master'.

Make Add subbrush off on changing multibrush tool's type from Copy Translate

This commit makes the Add option of subbrush off when changing from
Copy Translate type to any other type. The option is toggled off
even for Copy Translate type of multibrush. Previously the Add
option stayed on and drawing with other tools was not possible unless
it was turned off.

M  +2    -0    plugins/tools/basictools/kis_tool_multihand.cpp

https://invent.kde.org/kde/krita/commit/df825790541e5226e26a2e8e221ae28169dce2c4
Comment 3 Halla Rempt 2020-01-08 13:56:22 UTC
Git commit aefd5398b5759048e2f5db5397da874ac5c8d559 by Boudewijn Rempt, on behalf of Saurabh Kumar.
Committed on 08/01/2020 at 13:33.
Pushed by rempt into branch 'krita/4.2'.

Make Add subbrush off on changing multibrush tool's type from Copy Translate

This commit makes the Add option of subbrush off when changing from
Copy Translate type to any other type. The option is toggled off
even for Copy Translate type of multibrush. Previously the Add
option stayed on and drawing with other tools was not possible unless
it was turned off.

M  +2    -0    plugins/tools/basictools/kis_tool_multihand.cpp

https://invent.kde.org/kde/krita/commit/aefd5398b5759048e2f5db5397da874ac5c8d559