plugins/tools/basictools/kis_tool_multihand.cpp
@@ -530,6 +530,7 @@ void KisToolMultihand::slotSetTransformMode(int index)
     customUI->subbrushLabel->setVisible(false);
     customUI->addSubbrushButton->setVisible(false);
     customUI->removeSubbrushButton->setVisible(false);
+    m_addSubbrushesMode = 0;
 
     // turn on what we need
     if (index == MIRROR) {
@@ -552,6 +553,7 @@ void KisToolMultihand::slotSetTransformMode(int index)
     else if (index == COPYTRANSLATE) {
         customUI->subbrushLabel->setVisible(true);
         customUI->addSubbrushButton->setVisible(true);
+        customUI->addSubbrushButton->setChecked(false);
         customUI->removeSubbrushButton->setVisible(true);
     }
 
